Update from https://github.com/thebesttv/eserver-static/commit/54f6a8f58f053311277071eaf563ab63a2ae701f

--- a/content/collections/index.html
+++ b/content/collections/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-12-04 02:43 -->
+<!-- 2022-12-04 18:22 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>收藏夹</title>
@@ -46,48 +46,48 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orgbe10027">1. 妙妙文章</a>
+<li><a href="#org7ab2ea2">1. 妙妙文章</a>
 <ul>
-<li><a href="#orgab2a702">1.1. 关于死亡 &#x2014; 让世界知道我来过</a></li>
-<li><a href="#orgb6f7c11">1.2. 关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></li>
-<li><a href="#org0317b12">1.3. 关于编码 &#x2014; UTF-8 遍地开花</a></li>
-<li><a href="#org5aa925a">1.4. 关于编辑器</a></li>
-<li><a href="#org3cb95b5">1.5. 关于代码</a>
+<li><a href="#org48b9490">1.1. 关于死亡 &#x2014; 让世界知道我来过</a></li>
+<li><a href="#org888d42d">1.2. 关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></li>
+<li><a href="#org3c83aa6">1.3. 关于编码 &#x2014; UTF-8 遍地开花</a></li>
+<li><a href="#org529dd85">1.4. 关于编辑器</a></li>
+<li><a href="#orga7454a3">1.5. 关于代码</a>
 <ul>
-<li><a href="#org4048fab">1.5.1. Lisp</a></li>
+<li><a href="#orgf297004">1.5.1. Lisp</a></li>
 </ul>
 </li>
-<li><a href="#org596f93c">1.6. 关于CPU</a></li>
-<li><a href="#org87517e3">1.7. 关于算法</a>
+<li><a href="#orgc009095">1.6. 关于CPU</a></li>
+<li><a href="#orgc45fc8d">1.7. 关于算法</a>
 <ul>
-<li><a href="#org614d9fd">1.7.1. 关于随机</a></li>
+<li><a href="#orgcc18036">1.7.1. 关于随机</a></li>
 </ul>
 </li>
-<li><a href="#orgd18812d">1.8. 关于AI</a></li>
-<li><a href="#orgcea1203">1.9. 关于软件</a>
+<li><a href="#org08c1a9f">1.8. 关于AI</a></li>
+<li><a href="#org79309f1">1.9. 关于软件</a>
 <ul>
-<li><a href="#orgbc9514c">1.9.1. SQLite</a></li>
+<li><a href="#org0c4436b">1.9.1. SQLite</a></li>
 </ul>
 </li>
-<li><a href="#orgef5c2a3">1.10. 关于workflow</a></li>
+<li><a href="#org59c081e">1.10. 关于workflow</a></li>
 </ul>
 </li>
-<li><a href="#org7e6d471">2. 棒棒视频</a>
+<li><a href="#org7da34a2">2. 棒棒视频</a>
 <ul>
-<li><a href="#org341b9ec">2.1. Veritasium 真理元素</a></li>
-<li><a href="#org78330b1">2.2. 迷因水母</a></li>
-<li><a href="#orgfe184f7">2.3. 各种剧</a></li>
-<li><a href="#org32d0e54">2.4. 电影</a></li>
+<li><a href="#org38d72ff">2.1. Veritasium 真理元素</a></li>
+<li><a href="#orgb89b719">2.2. 迷因水母</a></li>
+<li><a href="#org9285536">2.3. 各种剧</a></li>
+<li><a href="#orgf6ca646">2.4. 电影</a></li>
 </ul>
 </li>
-<li><a href="#orgf458895">3. 快乐游戏</a></li>
-<li><a href="#org4b7a63d">4. 宝藏博主</a></li>
-<li><a href="#orgcbc2431">5. 有意思的</a>
+<li><a href="#org8c2c391">3. 快乐游戏</a></li>
+<li><a href="#orged3da62">4. 宝藏博主</a></li>
+<li><a href="#orgbb24b88">5. 有意思的</a>
 <ul>
-<li><a href="#org68b7808">5.1. 关于网页 &#x2014; HTML &amp; CSS</a></li>
+<li><a href="#org30ecc78">5.1. 关于网页 &#x2014; HTML &amp; CSS</a></li>
 </ul>
 </li>
-<li><a href="#orge79924b">6. 我想玩的</a></li>
+<li><a href="#orga388e82">6. 我想玩的</a></li>
 </ul>
 </div>
 </nav>
@@ -96,8 +96,8 @@
 这里大概会放一些我喜欢的东西🥰
 </p>
 
-<div id="outline-container-orgbe10027" class="outline-2">
-<h2 id="orgbe10027"><span class="section-number-2">1.</span> <a href="#orgbe10027">妙妙文章</a></h2>
+<div id="outline-container-org7ab2ea2" class="outline-2">
+<h2 id="org7ab2ea2"><span class="section-number-2">1.</span> <a href="#org7ab2ea2">妙妙文章</a></h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
 <li><a href="https://idealclover.top/archives/627/">2020 年年终总结：致即将 22 岁的自己 &#x2014; 翠翠</a> 你工人爷爷的年终总结</li>
@@ -432,7 +432,7 @@ cards until the game is over.
 有好看的鸟鸟~
 </p>
 
-<figure id="org06a5cf7">
+<figure id="orgc475d95">
 <img src="./index/raku-inoue-plant-arrangements-19.jpg" alt="raku-inoue-plant-arrangements-19.jpg" width="60%" style="margin-left: auto; margin-right: auto;">
 
 </figure></li>
@@ -505,8 +505,8 @@ Shoot for simplicity and legibility, but keep your distinguishing features.
 </ul>
 </div>
 
-<div id="outline-container-orgab2a702" class="outline-3">
-<h3 id="orgab2a702"><span class="section-number-3">1.1.</span> <a href="#orgab2a702">关于死亡 &#x2014; 让世界知道我来过</a></h3>
+<div id="outline-container-org48b9490" class="outline-3">
+<h3 id="org48b9490"><span class="section-number-3">1.1.</span> <a href="#org48b9490">关于死亡 &#x2014; 让世界知道我来过</a></h3>
 <div class="outline-text-3" id="text-1-1">
 <ul class="org-ul">
 <li><p>
@@ -547,8 +547,8 @@ Shoot for simplicity and legibility, but keep your distinguishing features.
 </div>
 </div>
 
-<div id="outline-container-orgb6f7c11" class="outline-3">
-<h3 id="orgb6f7c11"><span class="section-number-3">1.2.</span> <a href="#orgb6f7c11">关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></h3>
+<div id="outline-container-org888d42d" class="outline-3">
+<h3 id="org888d42d"><span class="section-number-3">1.2.</span> <a href="#org888d42d">关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></h3>
 <div class="outline-text-3" id="text-1-2">
 <ul class="org-ul">
 <li><p>
@@ -582,8 +582,8 @@ have to kill yourself to be good at something.
 </div>
 </div>
 
-<div id="outline-container-org0317b12" class="outline-3">
-<h3 id="org0317b12"><span class="section-number-3">1.3.</span> <a href="#org0317b12">关于编码 &#x2014; UTF-8 遍地开花</a></h3>
+<div id="outline-container-org3c83aa6" class="outline-3">
+<h3 id="org3c83aa6"><span class="section-number-3">1.3.</span> <a href="#org3c83aa6">关于编码 &#x2014; UTF-8 遍地开花</a></h3>
 <div class="outline-text-3" id="text-1-3">
 <ul class="org-ul">
 <li><a href="http://www.hanselman.com/blog/why-the-askobama-tweet-was-garbled-on-screen-know-your-utf8-unicode-ascii-and-ansi-decoding-mr-president">Why the #AskObama Tweet was Garbled on Screen: Know your UTF-8,
@@ -617,8 +617,8 @@ This is not thebesttv.
 </div>
 </div>
 
-<div id="outline-container-org5aa925a" class="outline-3">
-<h3 id="org5aa925a"><span class="section-number-3">1.4.</span> <a href="#org5aa925a">关于编辑器</a></h3>
+<div id="outline-container-org529dd85" class="outline-3">
+<h3 id="org529dd85"><span class="section-number-3">1.4.</span> <a href="#org529dd85">关于编辑器</a></h3>
 <div class="outline-text-3" id="text-1-4">
 <ul class="org-ul">
 <li><p>
@@ -634,8 +634,8 @@ lsp and tree-sitter changed the entire ecosystem of editors.
 </div>
 </div>
 
-<div id="outline-container-org3cb95b5" class="outline-3">
-<h3 id="org3cb95b5"><span class="section-number-3">1.5.</span> <a href="#org3cb95b5">关于代码</a></h3>
+<div id="outline-container-orga7454a3" class="outline-3">
+<h3 id="orga7454a3"><span class="section-number-3">1.5.</span> <a href="#orga7454a3">关于代码</a></h3>
 <div class="outline-text-3" id="text-1-5">
 <ul class="org-ul">
 <li><a href="https://gigamonkeys.com/code-reading/">Code is not literature &#x2014; Peter Seibel</a> Don't read code like it's a
@@ -660,8 +660,8 @@ future.</li>
 </ul>
 </div>
 
-<div id="outline-container-org4048fab" class="outline-4">
-<h4 id="org4048fab"><span class="section-number-4">1.5.1.</span> <a href="#org4048fab">Lisp</a></h4>
+<div id="outline-container-orgf297004" class="outline-4">
+<h4 id="orgf297004"><span class="section-number-4">1.5.1.</span> <a href="#orgf297004">Lisp</a></h4>
 <div class="outline-text-4" id="text-1-5-1">
 <ul class="org-ul">
 <li><a href="http://winestockwebdesign.com/Essays/Lisp_Curse.html">The Lisp Curse &#x2014; Rudolf Winestock</a>
@@ -684,8 +684,8 @@ inspired to create their own game.
 </div>
 </div>
 
-<div id="outline-container-org596f93c" class="outline-3">
-<h3 id="org596f93c"><span class="section-number-3">1.6.</span> <a href="#org596f93c">关于CPU</a></h3>
+<div id="outline-container-orgc009095" class="outline-3">
+<h3 id="orgc009095"><span class="section-number-3">1.6.</span> <a href="#orgc009095">关于CPU</a></h3>
 <div class="outline-text-3" id="text-1-6">
 <ul class="org-ul">
 <li><p>
@@ -700,8 +700,8 @@ Intel并不是在挤牙膏，而是一直在努力探索。只有当你成为Int
 </div>
 </div>
 
-<div id="outline-container-org87517e3" class="outline-3">
-<h3 id="org87517e3"><span class="section-number-3">1.7.</span> <a href="#org87517e3">关于算法</a></h3>
+<div id="outline-container-orgc45fc8d" class="outline-3">
+<h3 id="orgc45fc8d"><span class="section-number-3">1.7.</span> <a href="#orgc45fc8d">关于算法</a></h3>
 <div class="outline-text-3" id="text-1-7">
 <ul class="org-ul">
 <li><a href="https://yonatankra.com/how-to-find-a-unique-number-in-a-list-of-pairs/">How to find a unique number in a list containing <b>pairs</b>?</a> 注意这里其他的数都是成对出现的, 那直接对整个list异或就行啦~ 如果其他数的出现次数不是偶数, 也可以用hash.</li>
@@ -720,8 +720,8 @@ OSTEP 里看到的, 之前一直用的除法, 没想到还要酱写.</li>
 </ul>
 </div>
 
-<div id="outline-container-org614d9fd" class="outline-4">
-<h4 id="org614d9fd"><span class="section-number-4">1.7.1.</span> <a href="#org614d9fd">关于随机</a></h4>
+<div id="outline-container-orgcc18036" class="outline-4">
+<h4 id="orgcc18036"><span class="section-number-4">1.7.1.</span> <a href="#orgcc18036">关于随机</a></h4>
 <div class="outline-text-4" id="text-1-7-1">
 <p>
 Cloudflare 的<a href="https://blog.cloudflare.com/">博客</a>有不少关于熵和随机的帖子
@@ -735,8 +735,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-orgd18812d" class="outline-3">
-<h3 id="orgd18812d"><span class="section-number-3">1.8.</span> <a href="#orgd18812d">关于AI</a></h3>
+<div id="outline-container-org08c1a9f" class="outline-3">
+<h3 id="org08c1a9f"><span class="section-number-3">1.8.</span> <a href="#org08c1a9f">关于AI</a></h3>
 <div class="outline-text-3" id="text-1-8">
 <ul class="org-ul">
 <li><a href="https://simonwillison.net/2022/Jul/9/gpt-3-explain-code/">Using GPT-3 to explain how code works</a> 没想到GPT-3这么厉害?</li>
@@ -746,8 +746,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-orgcea1203" class="outline-3">
-<h3 id="orgcea1203"><span class="section-number-3">1.9.</span> <a href="#orgcea1203">关于软件</a></h3>
+<div id="outline-container-org79309f1" class="outline-3">
+<h3 id="org79309f1"><span class="section-number-3">1.9.</span> <a href="#org79309f1">关于软件</a></h3>
 <div class="outline-text-3" id="text-1-9">
 <p>
 大概未经测试的软件总是脆弱的😮‍💨
@@ -758,8 +758,8 @@ Linux 的熵池</li>
 </ul>
 </div>
 
-<div id="outline-container-orgbc9514c" class="outline-4">
-<h4 id="orgbc9514c"><span class="section-number-4">1.9.1.</span> <a href="#orgbc9514c">SQLite</a></h4>
+<div id="outline-container-org0c4436b" class="outline-4">
+<h4 id="org0c4436b"><span class="section-number-4">1.9.1.</span> <a href="#org0c4436b">SQLite</a></h4>
 <div class="outline-text-4" id="text-1-9-1">
 <p>
 作为一个无处不在, 且运行于几乎所有架构与系统的数据库, SQLite 的测试代码量可谓恐怖&#x2014;测试代码行数是 SQLite 库的 608 倍, 几乎十亿行🤯
@@ -773,8 +773,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-orgef5c2a3" class="outline-3">
-<h3 id="orgef5c2a3"><span class="section-number-3">1.10.</span> <a href="#orgef5c2a3">关于workflow</a></h3>
+<div id="outline-container-org59c081e" class="outline-3">
+<h3 id="org59c081e"><span class="section-number-3">1.10.</span> <a href="#org59c081e">关于workflow</a></h3>
 <div class="outline-text-3" id="text-1-10">
 <ul class="org-ul">
 <li><a href="https://castel.dev/post/research-workflow/">My Mathematics PhD research workflow</a> 一个数学PhD的workflow, 包括LaTeX笔记
@@ -784,8 +784,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-org7e6d471" class="outline-2">
-<h2 id="org7e6d471"><span class="section-number-2">2.</span> <a href="#org7e6d471">棒棒视频</a></h2>
+<div id="outline-container-org7da34a2" class="outline-2">
+<h2 id="org7da34a2"><span class="section-number-2">2.</span> <a href="#org7da34a2">棒棒视频</a></h2>
 <div class="outline-text-2" id="text-2">
 <ul class="org-ul">
 <li><p>
@@ -844,8 +844,8 @@ Practical, but also works on the human level in this case.
 </ul>
 </div>
 
-<div id="outline-container-org341b9ec" class="outline-3">
-<h3 id="org341b9ec"><span class="section-number-3">2.1.</span> <a href="#org341b9ec">Veritasium 真理元素</a></h3>
+<div id="outline-container-org38d72ff" class="outline-3">
+<h3 id="org38d72ff"><span class="section-number-3">2.1.</span> <a href="#org38d72ff">Veritasium 真理元素</a></h3>
 <div class="outline-text-3" id="text-2-1">
 <ul class="org-ul">
 <li><a href="https://youtu.be/IgF3OX8nT0w">The Most Powerful Computers You've Never Heard Of</a>
@@ -876,8 +876,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org78330b1" class="outline-3">
-<h3 id="org78330b1"><span class="section-number-3">2.2.</span> <a href="#org78330b1">迷因水母</a></h3>
+<div id="outline-container-orgb89b719" class="outline-3">
+<h3 id="orgb89b719"><span class="section-number-3">2.2.</span> <a href="#orgb89b719">迷因水母</a></h3>
 <div class="outline-text-3" id="text-2-2">
 <ul class="org-ul">
 <li><p>
@@ -892,8 +892,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-orgfe184f7" class="outline-3">
-<h3 id="orgfe184f7"><span class="section-number-3">2.3.</span> <a href="#orgfe184f7">各种剧</a></h3>
+<div id="outline-container-org9285536" class="outline-3">
+<h3 id="org9285536"><span class="section-number-3">2.3.</span> <a href="#org9285536">各种剧</a></h3>
 <div class="outline-text-3" id="text-2-3">
 <ul class="org-ul">
 <li>摩登家庭</li>
@@ -917,8 +917,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org32d0e54" class="outline-3">
-<h3 id="org32d0e54"><span class="section-number-3">2.4.</span> <a href="#org32d0e54">电影</a></h3>
+<div id="outline-container-orgf6ca646" class="outline-3">
+<h3 id="orgf6ca646"><span class="section-number-3">2.4.</span> <a href="#orgf6ca646">电影</a></h3>
 <div class="outline-text-3" id="text-2-4">
 <ul class="org-ul">
 <li><a href="https://movie.douban.com/subject/2131459/">机器人总动员</a></li>
@@ -944,7 +944,7 @@ and exist, before it is generally received and practiced on.
 <a href="https://movie.douban.com/subject/19899707/">驯龙高手3</a> (再见~)
 </p>
 
-<figure id="orgfc44638">
+<figure id="orgd57e206">
 <img src="./index/dragon3.jpg" alt="dragon3.jpg" width="80%" style="margin-left: auto; margin-right: auto;">
 
 </figure></li>
@@ -962,8 +962,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-orgf458895" class="outline-2">
-<h2 id="orgf458895"><span class="section-number-2">3.</span> <a href="#orgf458895">快乐游戏</a></h2>
+<div id="outline-container-org8c2c391" class="outline-2">
+<h2 id="org8c2c391"><span class="section-number-2">3.</span> <a href="#org8c2c391">快乐游戏</a></h2>
 <div class="outline-text-2" id="text-3">
 <blockquote>
 <p>
@@ -993,8 +993,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org4b7a63d" class="outline-2">
-<h2 id="org4b7a63d"><span class="section-number-2">4.</span> <a href="#org4b7a63d">宝藏博主</a></h2>
+<div id="outline-container-orged3da62" class="outline-2">
+<h2 id="orged3da62"><span class="section-number-2">4.</span> <a href="#orged3da62">宝藏博主</a></h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li><a href="https://idealclover.top/">翠翠 / Idealclover</a></li>
@@ -1005,7 +1005,7 @@ and exist, before it is generally received and practiced on.
 <a href="https://collet66.web.fc2.com/">Syosa's Room</a> 画了很多像素花, 鸟, 狗
 </p>
 
-<figure id="org9ed426c">
+<figure id="org0984864">
 <img src="./index/pixel-birds.png" alt="pixel-birds.png" width="80%" style="margin-left: auto; margin-right: auto;">
 
 </figure></li>
@@ -1013,8 +1013,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-orgcbc2431" class="outline-2">
-<h2 id="orgcbc2431"><span class="section-number-2">5.</span> <a href="#orgcbc2431">有意思的</a></h2>
+<div id="outline-container-orgbb24b88" class="outline-2">
+<h2 id="orgbb24b88"><span class="section-number-2">5.</span> <a href="#orgbb24b88">有意思的</a></h2>
 <div class="outline-text-2" id="text-5">
 <ul class="org-ul">
 <li><p>
@@ -1040,8 +1040,8 @@ Always check your friendship before terminating it.  hhhh</li>
 </ul>
 </div>
 
-<div id="outline-container-org68b7808" class="outline-3">
-<h3 id="org68b7808"><span class="section-number-3">5.1.</span> <a href="#org68b7808">关于网页 &#x2014; HTML &amp; CSS</a></h3>
+<div id="outline-container-org30ecc78" class="outline-3">
+<h3 id="org30ecc78"><span class="section-number-3">5.1.</span> <a href="#org30ecc78">关于网页 &#x2014; HTML &amp; CSS</a></h3>
 <div class="outline-text-3" id="text-5-1">
 <ul class="org-ul">
 <li><a href="https://pinecast.com/feed/emacscast">这个网站</a>是 XML 格式的 RSS feed，不过仿佛加了一层 stylesheet 啥的🤔，
@@ -1053,8 +1053,8 @@ Always check your friendship before terminating it.  hhhh</li>
 </div>
 </div>
 
-<div id="outline-container-orge79924b" class="outline-2">
-<h2 id="orge79924b"><span class="section-number-2">6.</span> <a href="#orge79924b">我想玩的</a></h2>
+<div id="outline-container-orga388e82" class="outline-2">
+<h2 id="orga388e82"><span class="section-number-2">6.</span> <a href="#orga388e82">我想玩的</a></h2>
 <div class="outline-text-2" id="text-6">
 <p>
 大概是我想玩的各种游戏, 但因为事情好多好多, 而且只有一个集显笔记本,
@@ -1077,7 +1077,7 @@ Always check your friendship before terminating it.  hhhh</li>
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2021-05-19 08:10</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-12-02 20:41</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-04 02:43</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-04 18:22</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/collections/index.org">content/collections/index.org</a></td></tr>
 </table>
