--- a/content/emacs/org-hyperlink.html
+++ b/content/emacs/org-hyperlink.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-12-04 02:43 -->
+<!-- 2022-12-04 18:22 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Org-mode Hyperlinks</title>
@@ -46,14 +46,19 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#hlinks">1. Headings</a></li>
-<li><a href="#org1b2d9b0">2. Files</a></li>
-<li><a href="#orgd333308">3. Named Elements</a></li>
-<li><a href="#org7ebdf37">4. Dedicated Targets</a></li>
-<li><a href="#org01cfc90">5. Radio Targets</a></li>
-<li><a href="#example-section">6. Something to Refer to</a>
+<li><a href="#org18e7ea8">1. URLs</a>
 <ul>
-<li><a href="#org3d82e11">6.1. A sub-section</a></li>
+<li><a href="#org2ed3513">1.1. Info</a></li>
+</ul>
+</li>
+<li><a href="#hlinks">2. Headings</a></li>
+<li><a href="#orgc4a35d2">3. Files</a></li>
+<li><a href="#org9c0fe60">4. Named Elements</a></li>
+<li><a href="#org6e14736">5. Dedicated Targets</a></li>
+<li><a href="#org1d38a86">6. Radio Targets</a></li>
+<li><a href="#example-section">7. Something to Refer to</a>
+<ul>
+<li><a href="#org8093996">7.1. A sub-section</a></li>
 </ul>
 </li>
 </ul>
@@ -61,8 +66,29 @@
 </nav>
 <hr style="width: 80%;">
 
+<div id="outline-container-org18e7ea8" class="outline-2">
+<h2 id="org18e7ea8"><span class="section-number-2">1.</span> <a href="#org18e7ea8">URLs</a></h2>
+<div class="outline-text-2" id="text-1">
+</div>
+<div id="outline-container-org2ed3513" class="outline-3">
+<h3 id="org2ed3513"><span class="section-number-3">1.1.</span> <a href="#org2ed3513">Info</a></h3>
+<div class="outline-text-3" id="text-1-1">
+<p>
+Use the <code>info</code> link type to link to an Info manual or a specific node. <br>
+Link format: <code>info:manual-name#optional node name</code>.
+</p>
+<ul class="org-ul">
+<li>To link to the Org manual: <br>
+<code>see [[info:org][the Org manual]]</code> &rarr; see <a href="https://www.gnu.org/software/emacs/manual/html_mono/org.html#Top">the Org manual</a>;</li>
+<li>To link to the "User Input" node of the Emacs manual: <br>
+<code>see [[info:emacs#User Input][Kinds of User Input]]</code> &rarr; see <a href="https://www.gnu.org/software/emacs/manual/html_mono/emacs.html#User-Input">Kinds of User Input</a>.</li>
+</ul>
+</div>
+</div>
+</div>
+
 <div id="outline-container-hlinks" class="outline-2">
-<h2 id="hlinks"><span class="section-number-2">1.</span> <a href="#hlinks">Headings</a></h2>
+<h2 id="hlinks"><span class="section-number-2">2.</span> <a href="#hlinks">Headings</a></h2>
 <div class="outline-text-2" id="text-hlinks">
 <p>
 Use <code>C-c C-x p</code> to add <code>CUSTOM_ID</code> property to headings:
@@ -78,8 +104,8 @@ Use <code>C-c C-x p</code> to add <code>CUSTOM_ID</code> property to headings:
 Then you can use <code>[[#hlinks]]</code> to reference it.  For example,
 </p>
 <p class="verse">
-"<code>see Section [[#hlinks]]</code>" &rarr; see Section <a href="#hlinks">1</a>;<br>
-"<code>see Section [[#hlinks][/Hyperlinks/]]</code>" &rarr; see Section <a href="#hlinks"><i>Hyperlinks</i></a>.<br>
+<code>see Section [[#hlinks]]</code> &rarr; see Section <a href="#hlinks">2</a>;<br>
+<code>see Section [[#hlinks][/Hyperlinks/]]</code> &rarr; see Section <a href="#hlinks"><i>Hyperlinks</i></a>.<br>
 </p>
 
 <p>
@@ -87,8 +113,8 @@ Use <code>[[* Headings]]</code> to directly refer to the name of a heading.  Not
 that there's only one asterisk (<code>*</code>), no matter how deep the heading is.
 </p>
 <p class="verse">
-"<code>see Section [[* Named Elements]]</code>" &rarr; see Section <a href="#orgd333308">3</a>;<br>
-"<code>see the [[* A sub-section][sub-section]]</code> &rarr; see the <a href="#org3d82e11">sub-section</a>.<br>
+<code>see Section [[* Named Elements]]</code> &rarr; see Section <a href="#org9c0fe60">4</a>;<br>
+<code>see the [[* A sub-section][sub-section]]</code> &rarr; see the <a href="#org8093996">sub-section</a>.<br>
 </p>
 
 <p>
@@ -97,20 +123,20 @@ Use <code>C-c C-o</code> to nevigate to the target, and <code>C-c &amp;</code> t
 </div>
 </div>
 
-<div id="outline-container-org1b2d9b0" class="outline-2">
-<h2 id="org1b2d9b0"><span class="section-number-2">2.</span> <a href="#org1b2d9b0">Files</a></h2>
-<div class="outline-text-2" id="text-2">
+<div id="outline-container-orgc4a35d2" class="outline-2">
+<h2 id="orgc4a35d2"><span class="section-number-2">3.</span> <a href="#orgc4a35d2">Files</a></h2>
+<div class="outline-text-2" id="text-3">
 <p>
 You can go to a specific line in a file with by appending <code>::N</code> at the
 end of file name, e.g. <code>[[./org-hyperlink.org::10]]</code>.  However, this
-does can't be exported to HTML.
+can't be exported to HTML.
 </p>
 </div>
 </div>
 
-<div id="outline-container-orgd333308" class="outline-2">
-<h2 id="orgd333308"><span class="section-number-2">3.</span> <a href="#orgd333308">Named Elements</a></h2>
-<div class="outline-text-2" id="text-3">
+<div id="outline-container-org9c0fe60" class="outline-2">
+<h2 id="org9c0fe60"><span class="section-number-2">4.</span> <a href="#org9c0fe60">Named Elements</a></h2>
+<div class="outline-text-2" id="text-4">
 <p>
 Elements can be given a name:
 </p>
@@ -137,7 +163,7 @@ Three main elements that can be named:
 
 <p>
 You can refer to named elements using <code>[[named source block]]</code>, e.g.
-Fig. <a href="#org9960846">1</a>, Listing <a href="#orgd2e6b87">1</a>, and Table <a href="#orgdd3121d">1</a>.
+Fig. <a href="#org651b294">1</a>, Listing <a href="#org3644935">1</a>, and Table <a href="#orgb2d3a09">1</a>.
 </p>
 
 <p>
@@ -154,46 +180,46 @@ order to get proper numbering.
 </div>
 </div>
 
-<div id="outline-container-org7ebdf37" class="outline-2">
-<h2 id="org7ebdf37"><span class="section-number-2">4.</span> <a href="#org7ebdf37">Dedicated Targets</a></h2>
-<div class="outline-text-2" id="text-4">
+<div id="outline-container-org6e14736" class="outline-2">
+<h2 id="org6e14736"><span class="section-number-2">5.</span> <a href="#org6e14736">Dedicated Targets</a></h2>
+<div class="outline-text-2" id="text-5">
 <p>
 Dedicated targets can be used to refer to a paragraph or an item in a
 list.
 </p>
 <ul class="org-ul">
-<li>paragraph: <code>[[target][prefixed sentence]]</code> &rarr; <a href="#org2243496">prefixed sentence</a></li>
+<li>paragraph: <code>[[target][prefixed sentence]]</code> &rarr; <a href="#org06114a5">prefixed sentence</a></li>
 <li>unordered list:  <code>the [[unordered target]]^th in the list</code> &rarr;
-the <a href="#org5700bc9">3</a><sup>th</sup> in the list</li>
-<li>ordered list: <code>[[ordered target][lalala]]</code> &rarr; <a href="#orgcceb806">lalala</a></li>
+the <a href="#orgdfbe2b0">3</a><sup>th</sup> in the list</li>
+<li>ordered list: <code>[[ordered target][lalala]]</code> &rarr; <a href="#org1dac73d">lalala</a></li>
 </ul>
 </div>
 </div>
 
-<div id="outline-container-org01cfc90" class="outline-2">
-<h2 id="org01cfc90"><span class="section-number-2">5.</span> <a href="#org01cfc90">Radio Targets</a></h2>
-<div class="outline-text-2" id="text-5">
+<div id="outline-container-org1d38a86" class="outline-2">
+<h2 id="org1d38a86"><span class="section-number-2">6.</span> <a href="#org1d38a86">Radio Targets</a></h2>
+<div class="outline-text-2" id="text-6">
 <p>
 A radio target radiates its position.  It is enclosed in three angular
 brackets, e.g. <code>&lt;&lt;&lt;thebesttv&gt;&gt;&gt;</code> and <code>&lt;&lt;&lt;do re me&gt;&gt;&gt;</code> in section
-<a href="#example-section">6</a>.
+<a href="#example-section">7</a>.
 </p>
 
 <p>
 When a radio target is defined, any occurence of that word (or the
-words) in the document, e.g. <a href="#org8c09b32">thebesttv</a>, is automatically linked to the
+words) in the document, e.g. <a href="#org33c7219">thebesttv</a>, is automatically linked to the
 originating target.  This can be used for linking all the occurences of
-a terminology with its definition.  See the song of "<a href="#org7be39a4">do re me</a>".
+a terminology with its definition.  See the song of "<a href="#org20a246b">do re me</a>".
 </p>
 
 <p>
 See the manual: <a href="https://orgmode.org/manual/Radio-Targets.html">4.3 Radio Targets</a>.
-Again, <a href="#org8c09b32">thebesttv</a> and <a href="#org7be39a4">do re me</a>.
+Again, <a href="#org33c7219">thebesttv</a> and <a href="#org20a246b">do re me</a>.
 </p>
 </div>
 </div>
 <div id="outline-container-example-section" class="outline-2">
-<h2 id="example-section"><span class="section-number-2">6.</span> <a href="#example-section">Something to Refer to</a></h2>
+<h2 id="example-section"><span class="section-number-2">7.</span> <a href="#example-section">Something to Refer to</a></h2>
 <div class="outline-text-2" id="text-example-section">
 <p>
 This section presents some example code and their exported results for
@@ -217,32 +243,32 @@ This word---&#8203;<span style="text-decoration: underline;">&lt;&lt;&lt;thebest
 </div>
 
 <p>
-<a id="org2243496"></a> This is a sentence prefixed with a <i>dedicated target</i>.
+<a id="org06114a5"></a> This is a sentence prefixed with a <i>dedicated target</i>.
 </p>
 
 <ul class="org-ul">
 <li>unordered list</li>
 <li>some item</li>
-<li><a id="org5700bc9"></a> target in an unordered list</li>
+<li><a id="orgdfbe2b0"></a> target in an unordered list</li>
 </ul>
 
 
 <ol class="org-ol">
 <li>ordered list</li>
-<li><a id="orgcceb806"></a> target in an ordered list</li>
+<li><a id="org1dac73d"></a> target in an ordered list</li>
 </ol>
 
 <p>
-This word&#x2014;<a id="org8c09b32">thebesttv</a>&#x2014;is a radio target.
-<a id="org7be39a4">Do re me</a>, a radio target, also a <a href="https://en.wikipedia.org/wiki/Do-Re-Mi">song</a>.
+This word&#x2014;<a id="org33c7219">thebesttv</a>&#x2014;is a radio target.
+<a id="org20a246b">Do re me</a>, a radio target, also a <a href="https://en.wikipedia.org/wiki/Do-Re-Mi">song</a>.
 </p>
 </div>
 
-<div id="outline-container-org3d82e11" class="outline-3">
-<h3 id="org3d82e11"><span class="section-number-3">6.1.</span> <a href="#org3d82e11">A sub-section</a></h3>
-<div class="outline-text-3" id="text-6-1">
+<div id="outline-container-org8093996" class="outline-3">
+<h3 id="org8093996"><span class="section-number-3">7.1.</span> <a href="#org8093996">A sub-section</a></h3>
+<div class="outline-text-3" id="text-7-1">
 <div class="org-src-container">
-<pre class="src src-org"><span style="text-decoration: underline;">{{{image(30)}}}</span>
+<pre class="src src-org"><span style="text-decoration: underline;">{{{image(50)}}}</span>
 <span style="font-weight: bold; font-style: italic;">#+name: named image</span>
 <span style="font-weight: bold; font-style: italic;">#+caption:</span> sample image
 <span style="text-decoration: underline;"><a href="../daily/2021-05-20/lights-3.jpg">../daily/2021-05-20/lights-3.jpg</a></span>
@@ -264,20 +290,20 @@ This word&#x2014;<a id="org8c09b32">thebesttv</a>&#x2014;is a radio target.
 </div>
 
 
-<figure id="org9960846">
-<img src="../daily/2021-05-20/lights-3.jpg" alt="lights-3.jpg" width="30%" style="margin-left: auto; margin-right: auto;">
+<figure id="org651b294">
+<img src="../daily/2021-05-20/lights-3.jpg" alt="lights-3.jpg" width="50%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">&#22270;1&nbsp; </span>sample image</figcaption>
 </figure>
 
 <div class="org-src-container">
-<label class="org-src-name"><span class="listing-number">&#20195;&#30721;1&nbsp; </span>sample code</label><pre class="src src-elisp" id="orgd2e6b87">(<span style="font-weight: bold;">let</span> ((x 2))
+<label class="org-src-name"><span class="listing-number">&#20195;&#30721;1&nbsp; </span>sample code</label><pre class="src src-elisp" id="org3644935">(<span style="font-weight: bold;">let</span> ((x 2))
   (coderef)
   (1+ x))
 </pre>
 </div>
 
-<table id="orgdd3121d">
+<table id="orgb2d3a09">
 <caption class="t-above"><span class="table-number">&#34920;1&nbsp;</span> sample table</caption>
 
 <colgroup>
@@ -312,10 +338,10 @@ This word&#x2014;<a id="org8c09b32">thebesttv</a>&#x2014;is a radio target.
 </div>
 <div id="postamble" class="status">
 <hr><table class="postamble">
-  <tr><td class="org-right">Author</td><td class="org-left"><a href="#org8c09b32">thebesttv</a></td></tr>
+  <tr><td class="org-right">Author</td><td class="org-left"><a href="#org33c7219">thebesttv</a></td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2022-09-22 20:15</td></tr>
-  <tr><td class="org-right">Modified</td><td class="org-left">2022-12-03 22:44</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-04 02:43</td></tr>
+  <tr><td class="org-right">Modified</td><td class="org-left">2022-12-04 18:20</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-04 18:22</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/emacs/org-hyperlink.org">content/emacs/org-hyperlink.org</a></td></tr>
 </table>
