Update from https://github.com/thebesttv/eserver-static/commit/939caec8318be4f8a636a56158ea4718d8a1ca3f

--- a/content/emacs/org-hyperlink.html
+++ b/content/emacs/org-hyperlink.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-12-04 18:22 -->
+<!-- 2022-12-04 18:30 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Org-mode Hyperlinks</title>
@@ -46,19 +46,19 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org18e7ea8">1. URLs</a>
+<li><a href="#org4ce79dc">1. URLs</a>
 <ul>
-<li><a href="#org2ed3513">1.1. Info</a></li>
+<li><a href="#orgfe589b3">1.1. Info</a></li>
 </ul>
 </li>
 <li><a href="#hlinks">2. Headings</a></li>
-<li><a href="#orgc4a35d2">3. Files</a></li>
-<li><a href="#org9c0fe60">4. Named Elements</a></li>
-<li><a href="#org6e14736">5. Dedicated Targets</a></li>
-<li><a href="#org1d38a86">6. Radio Targets</a></li>
+<li><a href="#org060e475">3. Files</a></li>
+<li><a href="#org6e181a8">4. Named Elements</a></li>
+<li><a href="#org82df334">5. Dedicated Targets</a></li>
+<li><a href="#orgf3f47cb">6. Radio Targets</a></li>
 <li><a href="#example-section">7. Something to Refer to</a>
 <ul>
-<li><a href="#org8093996">7.1. A sub-section</a></li>
+<li><a href="#orgb0a6ad4">7.1. A sub-section</a></li>
 </ul>
 </li>
 </ul>
@@ -66,12 +66,12 @@
 </nav>
 <hr style="width: 80%;">
 
-<div id="outline-container-org18e7ea8" class="outline-2">
-<h2 id="org18e7ea8"><span class="section-number-2">1.</span> <a href="#org18e7ea8">URLs</a></h2>
+<div id="outline-container-org4ce79dc" class="outline-2">
+<h2 id="org4ce79dc"><span class="section-number-2">1.</span> <a href="#org4ce79dc">URLs</a></h2>
 <div class="outline-text-2" id="text-1">
 </div>
-<div id="outline-container-org2ed3513" class="outline-3">
-<h3 id="org2ed3513"><span class="section-number-3">1.1.</span> <a href="#org2ed3513">Info</a></h3>
+<div id="outline-container-orgfe589b3" class="outline-3">
+<h3 id="orgfe589b3"><span class="section-number-3">1.1.</span> <a href="#orgfe589b3">Info</a></h3>
 <div class="outline-text-3" id="text-1-1">
 <p>
 Use the <code>info</code> link type to link to an Info manual or a specific node. <br>
@@ -79,9 +79,9 @@ Link format: <code>info:manual-name#optional node name</code>.
 </p>
 <ul class="org-ul">
 <li>To link to the Org manual: <br>
-<code>see [[info:org][the Org manual]]</code> &rarr; see <a href="https://www.gnu.org/software/emacs/manual/html_mono/org.html#Top">the Org manual</a>;</li>
+<code>see [[info:org][the Org manual]]</code> &rarr; see <a href="https://www.gnu.org/software/emacs/manual/html_node/org/">the Org manual</a>;</li>
 <li>To link to the "User Input" node of the Emacs manual: <br>
-<code>see [[info:emacs#User Input][Kinds of User Input]]</code> &rarr; see <a href="https://www.gnu.org/software/emacs/manual/html_mono/emacs.html#User-Input">Kinds of User Input</a>.</li>
+<code>see [[info:emacs#User Input][Kinds of User Input]]</code> &rarr; see <a href="https://www.gnu.org/software/emacs/manual/html_node/emacs/User-Input.html">Kinds of User Input</a>.</li>
 </ul>
 </div>
 </div>
@@ -113,8 +113,8 @@ Use <code>[[* Headings]]</code> to directly refer to the name of a heading.  Not
 that there's only one asterisk (<code>*</code>), no matter how deep the heading is.
 </p>
 <p class="verse">
-<code>see Section [[* Named Elements]]</code> &rarr; see Section <a href="#org9c0fe60">4</a>;<br>
-<code>see the [[* A sub-section][sub-section]]</code> &rarr; see the <a href="#org8093996">sub-section</a>.<br>
+<code>see Section [[* Named Elements]]</code> &rarr; see Section <a href="#org6e181a8">4</a>;<br>
+<code>see the [[* A sub-section][sub-section]]</code> &rarr; see the <a href="#orgb0a6ad4">sub-section</a>.<br>
 </p>
 
 <p>
@@ -123,8 +123,8 @@ Use <code>C-c C-o</code> to nevigate to the target, and <code>C-c &amp;</code> t
 </div>
 </div>
 
-<div id="outline-container-orgc4a35d2" class="outline-2">
-<h2 id="orgc4a35d2"><span class="section-number-2">3.</span> <a href="#orgc4a35d2">Files</a></h2>
+<div id="outline-container-org060e475" class="outline-2">
+<h2 id="org060e475"><span class="section-number-2">3.</span> <a href="#org060e475">Files</a></h2>
 <div class="outline-text-2" id="text-3">
 <p>
 You can go to a specific line in a file with by appending <code>::N</code> at the
@@ -134,8 +134,8 @@ can't be exported to HTML.
 </div>
 </div>
 
-<div id="outline-container-org9c0fe60" class="outline-2">
-<h2 id="org9c0fe60"><span class="section-number-2">4.</span> <a href="#org9c0fe60">Named Elements</a></h2>
+<div id="outline-container-org6e181a8" class="outline-2">
+<h2 id="org6e181a8"><span class="section-number-2">4.</span> <a href="#org6e181a8">Named Elements</a></h2>
 <div class="outline-text-2" id="text-4">
 <p>
 Elements can be given a name:
@@ -163,7 +163,7 @@ Three main elements that can be named:
 
 <p>
 You can refer to named elements using <code>[[named source block]]</code>, e.g.
-Fig. <a href="#org651b294">1</a>, Listing <a href="#org3644935">1</a>, and Table <a href="#orgb2d3a09">1</a>.
+Fig. <a href="#org2960ed8">1</a>, Listing <a href="#org7192201">1</a>, and Table <a href="#org3f136a3">1</a>.
 </p>
 
 <p>
@@ -174,30 +174,30 @@ numbers like "Figure N" whould not show.
 <p>
 When targeting a ‘NAME’ keyword, the ‘CAPTION’ keyword is mandatory in
 order to get proper numbering.
-&#x2014;<a href="https://www.gnu.org/software/emacs/manual/html_mono/org.html#Internal-Links">Org manual 4.2 Internal Links</a>
+&#x2014;<a href="https://www.gnu.org/software/emacs/manual/html_node/org/Internal-Links.html">Org manual 4.2 Internal Links</a>
 </p>
 </blockquote>
 </div>
 </div>
 
-<div id="outline-container-org6e14736" class="outline-2">
-<h2 id="org6e14736"><span class="section-number-2">5.</span> <a href="#org6e14736">Dedicated Targets</a></h2>
+<div id="outline-container-org82df334" class="outline-2">
+<h2 id="org82df334"><span class="section-number-2">5.</span> <a href="#org82df334">Dedicated Targets</a></h2>
 <div class="outline-text-2" id="text-5">
 <p>
 Dedicated targets can be used to refer to a paragraph or an item in a
 list.
 </p>
 <ul class="org-ul">
-<li>paragraph: <code>[[target][prefixed sentence]]</code> &rarr; <a href="#org06114a5">prefixed sentence</a></li>
+<li>paragraph: <code>[[target][prefixed sentence]]</code> &rarr; <a href="#orga9d725b">prefixed sentence</a></li>
 <li>unordered list:  <code>the [[unordered target]]^th in the list</code> &rarr;
-the <a href="#orgdfbe2b0">3</a><sup>th</sup> in the list</li>
-<li>ordered list: <code>[[ordered target][lalala]]</code> &rarr; <a href="#org1dac73d">lalala</a></li>
+the <a href="#orge790a4c">3</a><sup>th</sup> in the list</li>
+<li>ordered list: <code>[[ordered target][lalala]]</code> &rarr; <a href="#orgc4cc3cd">lalala</a></li>
 </ul>
 </div>
 </div>
 
-<div id="outline-container-org1d38a86" class="outline-2">
-<h2 id="org1d38a86"><span class="section-number-2">6.</span> <a href="#org1d38a86">Radio Targets</a></h2>
+<div id="outline-container-orgf3f47cb" class="outline-2">
+<h2 id="orgf3f47cb"><span class="section-number-2">6.</span> <a href="#orgf3f47cb">Radio Targets</a></h2>
 <div class="outline-text-2" id="text-6">
 <p>
 A radio target radiates its position.  It is enclosed in three angular
@@ -207,14 +207,14 @@ brackets, e.g. <code>&lt;&lt;&lt;thebesttv&gt;&gt;&gt;</code> and <code>&lt;&lt;
 
 <p>
 When a radio target is defined, any occurence of that word (or the
-words) in the document, e.g. <a href="#org33c7219">thebesttv</a>, is automatically linked to the
+words) in the document, e.g. <a href="#org81ffbb7">thebesttv</a>, is automatically linked to the
 originating target.  This can be used for linking all the occurences of
-a terminology with its definition.  See the song of "<a href="#org20a246b">do re me</a>".
+a terminology with its definition.  See the song of "<a href="#org09d1ea0">do re me</a>".
 </p>
 
 <p>
 See the manual: <a href="https://orgmode.org/manual/Radio-Targets.html">4.3 Radio Targets</a>.
-Again, <a href="#org33c7219">thebesttv</a> and <a href="#org20a246b">do re me</a>.
+Again, <a href="#org81ffbb7">thebesttv</a> and <a href="#org09d1ea0">do re me</a>.
 </p>
 </div>
 </div>
@@ -243,29 +243,29 @@ This word---&#8203;<span style="text-decoration: underline;">&lt;&lt;&lt;thebest
 </div>
 
 <p>
-<a id="org06114a5"></a> This is a sentence prefixed with a <i>dedicated target</i>.
+<a id="orga9d725b"></a> This is a sentence prefixed with a <i>dedicated target</i>.
 </p>
 
 <ul class="org-ul">
 <li>unordered list</li>
 <li>some item</li>
-<li><a id="orgdfbe2b0"></a> target in an unordered list</li>
+<li><a id="orge790a4c"></a> target in an unordered list</li>
 </ul>
 
 
 <ol class="org-ol">
 <li>ordered list</li>
-<li><a id="org1dac73d"></a> target in an ordered list</li>
+<li><a id="orgc4cc3cd"></a> target in an ordered list</li>
 </ol>
 
 <p>
-This word&#x2014;<a id="org33c7219">thebesttv</a>&#x2014;is a radio target.
-<a id="org20a246b">Do re me</a>, a radio target, also a <a href="https://en.wikipedia.org/wiki/Do-Re-Mi">song</a>.
+This word&#x2014;<a id="org81ffbb7">thebesttv</a>&#x2014;is a radio target.
+<a id="org09d1ea0">Do re me</a>, a radio target, also a <a href="https://en.wikipedia.org/wiki/Do-Re-Mi">song</a>.
 </p>
 </div>
 
-<div id="outline-container-org8093996" class="outline-3">
-<h3 id="org8093996"><span class="section-number-3">7.1.</span> <a href="#org8093996">A sub-section</a></h3>
+<div id="outline-container-orgb0a6ad4" class="outline-3">
+<h3 id="orgb0a6ad4"><span class="section-number-3">7.1.</span> <a href="#orgb0a6ad4">A sub-section</a></h3>
 <div class="outline-text-3" id="text-7-1">
 <div class="org-src-container">
 <pre class="src src-org"><span style="text-decoration: underline;">{{{image(50)}}}</span>
@@ -290,20 +290,20 @@ This word&#x2014;<a id="org33c7219">thebesttv</a>&#x2014;is a radio target.
 </div>
 
 
-<figure id="org651b294">
+<figure id="org2960ed8">
 <img src="../daily/2021-05-20/lights-3.jpg" alt="lights-3.jpg" width="50%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">&#22270;1&nbsp; </span>sample image</figcaption>
 </figure>
 
 <div class="org-src-container">
-<label class="org-src-name"><span class="listing-number">&#20195;&#30721;1&nbsp; </span>sample code</label><pre class="src src-elisp" id="org3644935">(<span style="font-weight: bold;">let</span> ((x 2))
+<label class="org-src-name"><span class="listing-number">&#20195;&#30721;1&nbsp; </span>sample code</label><pre class="src src-elisp" id="org7192201">(<span style="font-weight: bold;">let</span> ((x 2))
   (coderef)
   (1+ x))
 </pre>
 </div>
 
-<table id="orgb2d3a09">
+<table id="org3f136a3">
 <caption class="t-above"><span class="table-number">&#34920;1&nbsp;</span> sample table</caption>
 
 <colgroup>
@@ -338,10 +338,10 @@ This word&#x2014;<a id="org33c7219">thebesttv</a>&#x2014;is a radio target.
 </div>
 <div id="postamble" class="status">
 <hr><table class="postamble">
-  <tr><td class="org-right">Author</td><td class="org-left"><a href="#org33c7219">thebesttv</a></td></tr>
+  <tr><td class="org-right">Author</td><td class="org-left"><a href="#org81ffbb7">thebesttv</a></td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2022-09-22 20:15</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-12-04 18:20</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-04 18:22</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-04 18:30</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/emacs/org-hyperlink.org">content/emacs/org-hyperlink.org</a></td></tr>
 </table>
