--- a/content/collections/tools.html
+++ b/content/collections/tools.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-12-04 18:22 -->
+<!-- 2022-12-04 18:30 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>有用的工具</title>
@@ -45,18 +45,18 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orgea6b0c9">1. 笔记</a></li>
-<li><a href="#orgb5ef480">2. 推送</a></li>
-<li><a href="#orga2a5624">3. Git</a></li>
-<li><a href="#org1864583">4. XBox</a></li>
-<li><a href="#org3736c6a">5. Bilibili</a></li>
+<li><a href="#org4388891">1. 笔记</a></li>
+<li><a href="#orge29d375">2. 推送</a></li>
+<li><a href="#org6855339">3. Git</a></li>
+<li><a href="#org03a9146">4. XBox</a></li>
+<li><a href="#org365a0ae">5. Bilibili</a></li>
 </ul>
 </div>
 </nav>
 <hr style="width: 80%;">
 
-<div id="outline-container-orgea6b0c9" class="outline-2">
-<h2 id="orgea6b0c9"><span class="section-number-2">1.</span> <a href="#orgea6b0c9">笔记</a></h2>
+<div id="outline-container-org4388891" class="outline-2">
+<h2 id="org4388891"><span class="section-number-2">1.</span> <a href="#org4388891">笔记</a></h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
 <li><a href="https://github.com/xournalpp/xournalpp/">Xournal++</a> 支持数位板的开源笔记软件</li>
@@ -64,8 +64,8 @@
 </div>
 </div>
 
-<div id="outline-container-orgb5ef480" class="outline-2">
-<h2 id="orgb5ef480"><span class="section-number-2">2.</span> <a href="#orgb5ef480">推送</a></h2>
+<div id="outline-container-orge29d375" class="outline-2">
+<h2 id="orge29d375"><span class="section-number-2">2.</span> <a href="#orge29d375">推送</a></h2>
 <div class="outline-text-2" id="text-2">
 <ul class="org-ul">
 <li><a href="https://ntfy.sh/">ntfy.sh</a> 一行 curl 即可使用的推送服务.
@@ -75,8 +75,8 @@
 </div>
 </div>
 
-<div id="outline-container-orga2a5624" class="outline-2">
-<h2 id="orga2a5624"><span class="section-number-2">3.</span> <a href="#orga2a5624">Git</a></h2>
+<div id="outline-container-org6855339" class="outline-2">
+<h2 id="org6855339"><span class="section-number-2">3.</span> <a href="#org6855339">Git</a></h2>
 <div class="outline-text-2" id="text-3">
 <ul class="org-ul">
 <li><a href="https://gource.io/">Gource - a software version control visualization tool</a>
@@ -90,8 +90,8 @@
 </div>
 </div>
 
-<div id="outline-container-org1864583" class="outline-2">
-<h2 id="org1864583"><span class="section-number-2">4.</span> <a href="#org1864583">XBox</a></h2>
+<div id="outline-container-org03a9146" class="outline-2">
+<h2 id="org03a9146"><span class="section-number-2">4.</span> <a href="#org03a9146">XBox</a></h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li><a href="https://github.com/zhxie/pcap2socks">pcap2socks</a> 跨平台, 简易, 可以直接利用 SOCKS 代理的加速器
@@ -102,8 +102,8 @@
 </div>
 </div>
 
-<div id="outline-container-org3736c6a" class="outline-2">
-<h2 id="org3736c6a"><span class="section-number-2">5.</span> <a href="#org3736c6a">Bilibili</a></h2>
+<div id="outline-container-org365a0ae" class="outline-2">
+<h2 id="org365a0ae"><span class="section-number-2">5.</span> <a href="#org365a0ae">Bilibili</a></h2>
 <div class="outline-text-2" id="text-5">
 <ul class="org-ul">
 <li><a href="https://github.com/nICEnnnnnnnLee/BilibiliDown">BilibiliDown</a> 视频下载</li>
@@ -117,7 +117,7 @@
   <tr><td class="org-right">Author</td><td class="org-left"></td></tr>
   <tr><td class="org-right">Created</td><td class="org-left"></td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-12-02 20:18</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-04 18:22</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-04 18:30</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/collections/tools.org">content/collections/tools.org</a></td></tr>
 </table>
